# svg_testing

./: readme.md
client/: app.ml  app.mli  dune  index_.html  main.ml  style_.css
scripts/: watch.sh
